mattermost-ldap.yaml
apiVersion: v1
kind: Service
metadata:
  name: mattermost-ldap
spec:  
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: mattermost-ldap
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mattermost-ldap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mattermost-ldap
  template:
    metadata:
      labels:
        app: mattermost-ldap
    spec:
      containers:
      - name: mattermost-ldap
        image: davebown/mattermost-ldap:0.1
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        readinessProbe:
          httpGet:
            port: http
            path: /oauth/index.php
